# akss_cpp

./: .gitignore  CMakeLists.txt  Makefile
src/: CMakeLists.txt  abelian_group.cpp  abelian_group.h  abelian_group_impl.h  interactive_shell.cpp  interactive_shell.h  main.cpp  matrix.h  matrix_impl.h  morphisms.cpp  morphisms.h  morphisms_impl.h  p_local.cpp  p_local.h  parser.cpp  parser.h  session.cpp  session.h  smith.h  smith_impl.h  spectral_sequence.cpp  spectral_sequence.h  spectral_sequence_impl.h  task.cpp  task.h  types.h
test/: CMakeLists.txt  abelian_group_test.cpp  common.h  main.cpp  matrix_test.cpp  morphisms_test.cpp  p_local_test.cpp  parser_test.cpp  session_test.cpp  smith_test.cpp  spectral_sequence_test.cpp
test_data/SessionInitParse/: r_operations.dat.10  r_operations.dat.12  r_operations.dat.14  r_operations.dat.16  r_operations.dat.18  r_operations.dat.20  r_operations.dat.22  r_operations.dat.24  r_operations.dat.26  r_operations.dat.28  r_operations.dat.30  r_operations.dat.32  r_operations.dat.34  r_operations.dat.36  r_operations.dat.38  r_operations.dat.40  r_operations.dat.42  r_operations.dat.44  r_operations.dat.46  r_operations.dat.48  r_operations.dat.50  r_operations.dat.52  r_operations.dat.54  r_operations.dat.56  r_operations.dat.58  r_operations.dat.6  r_operations.dat.8
